--- a/www/src/scss/material/input.scss
+++ b/www/src/scss/material/input.scss
@@ -9,6 +9,7 @@ $width: 'auto';
 $font-size: '1em';
 $label-font-size: 1.2em;
 $margin: 2.81em;
+
 *,
 :before,
 :after {
@@ -19,7 +20,7 @@ $margin: 2.81em;
 form {
   width: $width;
   margin: $margin auto;
-  
+
   hr.sep {
     background: $hl-color;
     box-shadow: none;
@@ -28,6 +29,7 @@ form {
     width: 25%;
     margin: 0px auto $margin auto;
   }
+
   .emoji {
     font-size: $font-size;
   }
@@ -54,7 +56,7 @@ textarea {
 input,
 textarea {
   background: none;
-  color: $muted-color;
+  color: $font;
   font-size: $label-font-size;
   padding: 10px 10px 10px 5px;
   display: block;
@@ -62,16 +64,19 @@ textarea {
   border: none;
   border-radius: 0;
   border-bottom: 1px solid $muted-color;
+
   &:focus {
     outline: none;
   }
-  &:focus ~ label,
-  &:valid ~ label {
+
+  &:focus~label,
+  &:valid~label {
     top: -14px;
     font-size: 12px;
     color: $hl-color;
   }
-  &:focus ~ .bar:before {
+
+  &:focus~.bar:before {
     width: $width;
   }
 }
@@ -81,7 +86,7 @@ input[type="password"] {
 }
 
 label {
-  color: $muted-color;
+  color: $font;
   font-size: 16px;
   font-weight: normal;
   position: absolute;
@@ -95,6 +100,7 @@ label {
   position: relative;
   display: block;
   width: $width;
+
   &:before {
     content: '';
     height: 2px;
